--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -1,12 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_subitems"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/spacing_tiny"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:paddingLeft="@dimen/spacing_small"
+    android:paddingRight="@dimen/spacing_small">
 
 
-    <TextView
-        android:id="@+id/txt_repo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:padding="16dp">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/trending_repository_avatar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:importantForAccessibility="no"
+            android:src="@drawable/avatar"
+            />
+        <TextView
+            android:id="@+id/trending_repository_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/trending_repository_avatar"
+            android:layout_toRightOf="@id/trending_repository_avatar"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="16sp"
+            tools:text="u2020"
+            />
+        <TextView
+            android:id="@+id/trending_repository_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/trending_repository_name"
+            android:layout_toEndOf="@id/trending_repository_avatar"
+            android:layout_toRightOf="@id/trending_repository_avatar"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="14sp"
+            android:maxLines="3"
+            android:ellipsize="end"
+            tools:text="square — A sample Android app which showcases advanced usage of Dagger among other open source libraries."
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/trending_repository_description"
+            android:layout_marginTop="8dp"
+            android:layout_toEndOf="@id/trending_repository_avatar"
+            android:layout_toRightOf="@id/trending_repository_avatar"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:id="@+id/trending_repository_stars"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:drawablePadding="4dp"
+                android:drawableLeft="@drawable/star"
+                android:drawableStart="@drawable/star"
+                android:gravity="center"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="12sp"
+                tools:text="1487"
+                />
+            <TextView
+                android:id="@+id/trending_repository_forks"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="4dp"
+                android:drawableLeft="@drawable/fork"
+                android:drawableStart="@drawable/fork"
+                android:gravity="center"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="12sp"
+                tools:text="260"
+                />
+        </LinearLayout>
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
